--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
 span:after {
   content: ' \2730';
 }
-
-
-/* footer {
+/* 
+footer {
   background-color: rgb(164, 222, 240);
   position: fixed;
   left: 0;
@@ -57,4 +56,161 @@ p {
   color: white;
   background-color: rgb(212, 164, 240);
   padding: 10px;
-} */
+}  */
+
+.main{
+  background-color: white;
+  padding:150px;
+}
+
+.jumbotron{
+  background-color:white;
+  color: black;
+  padding-bottom:180px;
+}
+
+.intro{
+  background-color:#ef0ef7;;
+  color:white;
+}
+.lead{
+  padding-left:200px;
+  padding-right:200px;
+
+}
+
+.btn{
+  background-color: #ef0ef7;
+  color:black;
+  border-color:black;
+  border-radius: 15px;;
+}
+.btn:hover{
+  background-color: black;
+  color:#ef0ef7;
+  border-color:black;
+  border-radius: 15px;
+  box-shadow: 10px 10px 8px white;
+}
+.headers{
+  padding-top:40px;
+  padding-bottom:30px;
+}
+.skillsHead{
+  color:black
+}
+
+.skills{
+  background-color:white;
+border-width:5px;
+border-color:black;
+border-style:ridge;
+border-radius:15px;
+padding-bottom:40px;
+margin-top:20px;
+
+
+}
+.list-group-item{
+font-weight: bold;
+color:#ef0ef7
+
+}
+.projects{
+  background-color:black;
+  margin:10px 70px 70px 70px;
+  padding:5px;
+  border-width:5px;
+border-color:#ef0ef7;
+border-style:ridge;
+border-radius:15px;
+padding-bottom:40px;
+  
+}
+.projHead{
+  color:#ef0ef7
+}
+
+.card{
+  margin-left:10px;
+}
+.small{
+  color:#ef0ef7
+}
+footer{
+  border-color:black;
+border-style:ridge;
+border-radius:15px;
+padding:40px;
+text-align:center;
+}
+
+/* CONTACT PAGE CSS */
+nav{
+  background-color:black;
+  border-color:#ef0ef7;
+  border-style:ridge;
+  border-radius:10px;
+
+}
+.btmBtn{
+  background-color:black;
+  border-color:#ef0ef7;
+  border-style:ridge;
+  border-radius:10px;
+  margin-top:20px;
+  margin-left:44%;
+}
+.btmBtn:hover{
+  background-color: white;
+  border-color:black;
+  border-radius: 15px;
+  box-shadow: 10px 10px 8px #ef0ef7;
+
+}
+.btm{
+  padding:15px;
+  text-align: center;
+  color:white;
+}
+.btm:hover{
+  padding:15px;
+  text-align: center;
+  color:#ef0ef7;
+
+}
+.navButt{
+  color:white;
+  padding:30px;
+}
+.navButt:hover{
+  color:white;
+  padding:30px;
+  font-weight: 800;
+}
+
+input{
+  color:#ef0ef7;
+}
+
+form{
+  background-color:black;
+  color:white;
+  padding:40px;
+  margin:40px;
+  border-color:black;
+  border-style:ridge;
+  border-radius:30px;
+  box-shadow: 10px 10px 100px #ef0ef7;
+}
+label{
+  padding:15px;
+
+}
+.contactSubmitBtn:hover{
+  background-color: white;
+  color:#ef0ef7;
+  border-color:black;
+  border-radius: 15px;
+  box-shadow: 10px 10px 8px #ef0ef7;
+}
